Keep track of the number of attributes retrieved from LDAP so that all the values can be properly cached even if the value is NULL.  [PR 33901]

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@156587 13f79535-47bb-0310-9956-ffa450edef68